2003-06-02  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/bits/sched.h (CLONE_PID): Remove.

2003-06-01  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/i386/dl-machine.h: Include <sysdep.h>.

2003-06-01  Ulrich Drepper  <drepper@redhat.com>

	* test-skeleton.c (main): Request getopt to not reorder the
	command line.

	* elf/Makefile (CFLAGS-dl-runtime.c): Define.

	* wcsmbs/wcpncpy.c (__wcpncpy): Fix broken implementation to match
	stpncpy.

2003-05-31  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/ia64/bits/sigaction.h (SA_NOCLDWAIT): Define.

2003-05-31  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/powerpc/powerpc64/dl-machine.h (elf_machine_plt_conflict):
	New function.
	(elf_machine_rela) <case R_PPC64_JMP_SLOT>: Avoid
	RESOLVE_CONFLICT_FIND_MAP.  If RESOLVE_CONFLICT_FIND_MAP is defined,
	call elf_machine_plt_conflict instead of elf_machine_fixup_plt.

2003-05-31  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/dl-machine.h (ELF_MACHINE_RUNTIME_TRAMPOLINE): Add
	CFI directives.

	* csu/Makefile: Fix Makefile warnings regarding Scrt1.o.

	* libio/fileops.c (_IO_file_open): Don't mark as inline.

	* sysdeps/ia64/elf/initfini.c (gmon_initializer): Mark with
	attribute used.

2003-05-30  Ulrich Drepper  <drepper@redhat.com>

	* scripts/config.guess: Update from master copy.
	* scripts/config.sub: Likewise.

2003-05-30  Guido Guenther  <agx@sigxcpu.org>

	* sysdeps/mips/mips64/bsd-_setjmp.S: Include <sys/asm.h> for
	SETUP_GP64 and friends.
	* sysdeps/unix/sysv/linux/mips/mips64/n32/sysdep.h: Fix register
	names in internal_syscall{6,7}.
	* sysdeps/unix/sysv/linux/mips/mips64/n64/sysdep.h: Likewise.
	* sysdeps/unix/sysv/linux/mips/pread.c [_MIPS_SIM == _ABI64]: Fix
	number of syscall arguments.
	* sysdeps/unix/sysv/linux/mips/pwrite.c: Likewise.
	* sysdeps/unix/sysv/linux/mips/pread64.c: Likewise.
	* sysdeps/unix/sysv/linux/mips/pwrite64.c: Likewise.

2003-05-30  Andreas Jaeger  <aj@suse.de>
